implementation of the priority binary heap tree

--- a/pythonds-7-PE.ipynb
+++ b/pythonds-7-PE.ipynb
@@ -8,22 +8,67 @@
    "source": [
     "# binary heap\n",
     "# how to keep a tree balanced (has roughly the same number of nodes in the left and right subtrees of the root.)\n",
-    "from pythonds.trees import BinHeap\n",
+    "class BinHeap:\n",
+    "    def __init__(self):\n",
+    "        self.heapList = [0]\n",
+    "        self.currentSize = 0\n",
+    "\n",
+    "\n",
+    "    def percUp(self,i):\n",
+    "        while i // 2 > 0:\n",
+    "          if self.heapList[i] < self.heapList[i // 2]:\n",
+    "             tmp = self.heapList[i // 2]\n",
+    "             self.heapList[i // 2] = self.heapList[i]\n",
+    "             self.heapList[i] = tmp\n",
+    "          i = i // 2\n",
+    "\n",
+    "    def insert(self,k):\n",
+    "      self.heapList.append(k)\n",
+    "      self.currentSize = self.currentSize + 1\n",
+    "      self.percUp(self.currentSize)\n",
+    "\n",
+    "    def percDown(self,i):\n",
+    "      while (i * 2) <= self.currentSize:\n",
+    "          mc = self.minChild(i)\n",
+    "          if self.heapList[i] > self.heapList[mc]:\n",
+    "              tmp = self.heapList[i]\n",
+    "              self.heapList[i] = self.heapList[mc]\n",
+    "              self.heapList[mc] = tmp\n",
+    "          i = mc\n",
+    "\n",
+    "    def minChild(self,i):\n",
+    "      if i * 2 + 1 > self.currentSize:\n",
+    "          return i * 2\n",
+    "      else:\n",
+    "          if self.heapList[i*2] < self.heapList[i*2+1]:\n",
+    "              return i * 2\n",
+    "          else:\n",
+    "              return i * 2 + 1\n",
+    "\n",
+    "    def delMin(self):\n",
+    "      retval = self.heapList[1]\n",
+    "      self.heapList[1] = self.heapList[self.currentSize]\n",
+    "      self.currentSize = self.currentSize - 1\n",
+    "      self.heapList.pop()\n",
+    "      self.percDown(1)\n",
+    "      return retval\n",
+    "\n",
+    "    def buildHeap(self,alist):\n",
+    "      i = len(alist) // 2\n",
+    "      self.currentSize = len(alist)\n",
+    "      self.heapList = [0] + alist[:]\n",
+    "      while (i > 0):\n",
+    "          self.percDown(i)\n",
+    "          i = i - 1\n",
     "\n",
     "bh = BinHeap()\n",
-    "bh.insert(5)\n",
-    "bh.insert(7)\n",
-    "bh.insert(3)\n",
-    "bh.insert(11)\n",
+    "bh.buildHeap([9,5,6,2,3])\n",
     "\n",
     "print(bh.delMin())\n",
-    "\n",
     "print(bh.delMin())\n",
-    "\n",
     "print(bh.delMin())\n",
-    "\n",
     "print(bh.delMin())\n",
-    "\n"
+    "print(bh.delMin())\n"
    ]
   },
   {
@@ -32,7 +77,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(\"hello World\")"
+    "print(\"hello World\")\n",
+    "\"\"\"\n",
+    "The two implementations of a map ADT we discussed were binary search on a list and hash tables. \n",
+    "In this section we will study binary search trees as yet another way to map from a key to a value. \n",
+    "In this case we are not interested in the exact placement of items in the tree, but we are interested in using the binary tree structure to provide for efficient searching\n",
+    "\"\"\""
    ]
   }
  ],
