add different implement of the binary tree data

--- a/pythonds-7-PE.ipynb
+++ b/pythonds-7-PE.ipynb
@@ -293,16 +293,78 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "hello World\n",
+      "a\n",
+      "None\n",
+      "<__main__.BinaryTree object at 0x7f9a602e2570>\n",
+      "b\n",
+      "<__main__.BinaryTree object at 0x7f9a601d2240>\n",
+      "c\n",
+      "hello\n"
+     ]
+    }
+   ],
    "source": [
     "print(\"hello World\")\n",
     "\"\"\"\n",
     "The two implementations of a map ADT we discussed were binary search on a list and hash tables. \n",
     "In this section we will study binary search trees as yet another way to map from a key to a value. \n",
     "In this case we are not interested in the exact placement of items in the tree, but we are interested in using the binary tree structure to provide for efficient searching\n",
-    "\"\"\""
+    "\"\"\"\n",
+    "class BinaryTree:\n",
+    "    def __init__(self,rootObj):\n",
+    "        self.key = rootObj\n",
+    "        self.leftChild = None\n",
+    "        self.rightChild = None\n",
+    "\n",
+    "    def insertLeft(self,newNode):\n",
+    "        if self.leftChild == None:\n",
+    "            self.leftChild = BinaryTree(newNode)\n",
+    "        else:\n",
+    "            t = BinaryTree(newNode)\n",
+    "            t.leftChild = self.leftChild\n",
+    "            self.leftChild = t\n",
+    "\n",
+    "    def insertRight(self,newNode):\n",
+    "        if self.rightChild == None:\n",
+    "            self.rightChild = BinaryTree(newNode)\n",
+    "        else:\n",
+    "            t = BinaryTree(newNode)\n",
+    "            t.rightChild = self.rightChild\n",
+    "            self.rightChild = t\n",
+    "\n",
+    "\n",
+    "    def getRightChild(self):\n",
+    "        return self.rightChild\n",
+    "\n",
+    "    def getLeftChild(self):\n",
+    "        return self.leftChild\n",
+    "\n",
+    "    def setRootVal(self,obj):\n",
+    "        self.key = obj\n",
+    "\n",
+    "    def getRootVal(self):\n",
+    "        return self.key\n",
+    "\n",
+    "\n",
+    "r = BinaryTree('a')\n",
+    "print(r.getRootVal())\n",
+    "print(r.getLeftChild())\n",
+    "r.insertLeft('b')\n",
+    "print(r.getLeftChild())\n",
+    "print(r.getLeftChild().getRootVal())\n",
+    "r.insertRight('c')\n",
+    "print(r.getRightChild())\n",
+    "print(r.getRightChild().getRootVal())\n",
+    "r.getRightChild().setRootVal('hello')\n",
+    "print(r.getRightChild().getRootVal())\n"
    ]
   }
  ],
@@ -313,7 +375,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.12.6"
   }
  },
