--- a/pythonds-5-PE.ipynb
+++ b/pythonds-5-PE.ipynb
@@ -3878,6 +3878,112 @@
    "outputs": [],
    "source": [
     "\"\"\"\n",
+    "Game based on the 3 misssionnaries and 3 cannibals\n",
+    "\"\"\"\n",
+    "#Python program to illustrate Missionaries & cannibals Problem \n",
+    "#This code is contributed by Sunit Mal \n",
+    "print(\"\\n\") \n",
+    "print(\"\\tGame Start\\nNow the task is to move all of them to right side of the river\") \n",
+    "print(\"rules:\\n1. The boat can carry at most two people\\n2. If cannibals num greater than missionaries then the cannibals would eat the missionaries\\n3. The boat cannot cross the river by itself with no people on board\") \n",
+    "lM = 3\t\t #lM = Left side Missionaries number \n",
+    "lC = 3\t\t #lC = Laft side Cannibals number \n",
+    "rM=0\t\t #rM = Right side Missionaries number \n",
+    "rC=0\t\t #rC = Right side cannibals number \n",
+    "userM = 0\t #userM = User input for number of missionaries for right to left side travel \n",
+    "userC = 0\t #userC = User input for number of cannibals for right to left travel \n",
+    "k = 0\n",
+    "print(\"\\nM M M C C C |\t --- | \\n\") \n",
+    "try: \n",
+    "\twhile(True): \n",
+    "\t\twhile(True): \n",
+    "\t\t\tprint(\"Left side -> right side river travel\") \n",
+    "\t\t\t#uM = user input for number of missionaries for left to right travel \n",
+    "\t\t\t#uC = user input for number of cannibals for left to right travel \n",
+    "\t\t\tuM = int(input(\"Enter number of Missionaries travel => \"))\t \n",
+    "\t\t\tuC = int(input(\"Enter number of Cannibals travel => \")) \n",
+    "\n",
+    "\t\t\tif((uM==0)and(uC==0)): \n",
+    "\t\t\t\tprint(\"Empty travel not possible\") \n",
+    "\t\t\t\tprint(\"Re-enter : \") \n",
+    "\t\t\telif(((uM+uC) <= 2)and((lM-uM)>=0)and((lC-uC)>=0)): \n",
+    "\t\t\t\tbreak\n",
+    "\t\t\telse: \n",
+    "\t\t\t\tprint(\"Wrong input re-enter : \") \n",
+    "\t\tlM = (lM-uM) \n",
+    "\t\tlC = (lC-uC) \n",
+    "\t\trM += uM \n",
+    "\t\trC += uC \n",
+    "\n",
+    "\t\tprint(\"\\n\") \n",
+    "\t\tfor i in range(0,lM): \n",
+    "\t\t\tprint(\"M \",end=\"\") \n",
+    "\t\tfor i in range(0,lC): \n",
+    "\t\t\tprint(\"C \",end=\"\") \n",
+    "\t\tprint(\"| --> | \",end=\"\") \n",
+    "\t\tfor i in range(0,rM): \n",
+    "\t\t\tprint(\"M \",end=\"\") \n",
+    "\t\tfor i in range(0,rC): \n",
+    "\t\t\tprint(\"C \",end=\"\") \n",
+    "\t\tprint(\"\\n\") \n",
+    "\n",
+    "\t\tk +=1\n",
+    "\n",
+    "\t\tif(((lC==3)and (lM == 1))or((lC==3)and(lM==2))or((lC==2)and(lM==1))or((rC==3)and (rM == 1))or((rC==3)and(rM==2))or((rC==2)and(rM==1))): \n",
+    "\t\t\tprint(\"Cannibals eat missionaries:\\nYou lost the game\") \n",
+    "\n",
+    "\t\t\tbreak\n",
+    "\n",
+    "\t\tif((rM+rC) == 6): \n",
+    "\t\t\tprint(\"You won the game : \\n\\tCongrats\") \n",
+    "\t\t\tprint(\"Total attempt\") \n",
+    "\t\t\tprint(k) \n",
+    "\t\t\tbreak\n",
+    "\t\twhile(True): \n",
+    "\t\t\tprint(\"Right side -> Left side river travel\") \n",
+    "\t\t\tuserM = int(input(\"Enter number of Missionaries travel => \")) \n",
+    "\t\t\tuserC = int(input(\"Enter number of Cannibals travel => \")) \n",
+    "\t\t\t\n",
+    "\t\t\tif((userM==0)and(userC==0)): \n",
+    "\t\t\t\t\tprint(\"Empty travel not possible\") \n",
+    "\t\t\t\t\tprint(\"Re-enter : \") \n",
+    "\t\t\telif(((userM+userC) <= 2)and((rM-userM)>=0)and((rC-userC)>=0)): \n",
+    "\t\t\t\tbreak\n",
+    "\t\t\telse: \n",
+    "\t\t\t\tprint(\"Wrong input re-enter : \") \n",
+    "\t\tlM += userM \n",
+    "\t\tlC += userC \n",
+    "\t\trM -= userM \n",
+    "\t\trC -= userC \n",
+    "\n",
+    "\t\tk +=1\n",
+    "\t\tprint(\"\\n\") \n",
+    "\t\tfor i in range(0,lM): \n",
+    "\t\t\tprint(\"M \",end=\"\") \n",
+    "\t\tfor i in range(0,lC): \n",
+    "\t\t\tprint(\"C \",end=\"\") \n",
+    "\t\tprint(\"| <-- | \",end=\"\") \n",
+    "\t\tfor i in range(0,rM): \n",
+    "\t\t\tprint(\"M \",end=\"\") \n",
+    "\t\tfor i in range(0,rC): \n",
+    "\t\t\tprint(\"C \",end=\"\") \n",
+    "\t\tprint(\"\\n\") \n",
+    "\n",
+    "\t\n",
+    "\n",
+    "\t\tif(((lC==3)and (lM == 1))or((lC==3)and(lM==2))or((lC==2)and(lM==1))or((rC==3)and (rM == 1))or((rC==3)and(rM==2))or((rC==2)and(rM==1))): \n",
+    "\t\t\tprint(\"Cannibals eat missionaries:\\nYou lost the game\") \n",
+    "\t\t\tbreak\n",
+    "except EOFError as e: \n",
+    "\tprint(\"\\nInvalid input please retry !!\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\"\"\"\n",
     "Modify the Tower of Hanoi program using turtle graphics to animate the movement of the disks. Hint: You can make multiple turtles and have them shaped like rectangles.\n",
     "\"\"\""
    ]
