chore: DSA exercises

--- a/pythonds-5-PE.ipynb
+++ b/pythonds-5-PE.ipynb
@@ -3985,7 +3985,84 @@
    "source": [
     "\"\"\"\n",
     "Modify the Tower of Hanoi program using turtle graphics to animate the movement of the disks. Hint: You can make multiple turtles and have them shaped like rectangles.\n",
-    "\"\"\""
+    "\"\"\"\n",
+    "\n",
+    "from pythonds.basic import Stack2\n",
+    "\n",
+    "A = Stack2(\"A\")\n",
+    "B = Stack2(\"B\")\n",
+    "C = Stack2(\"C\")\n",
+    "\n",
+    "def feeling_up_disks(n, source_stack):\n",
+    "    for i in range(n, 0, -1):\n",
+    "        source_stack.push(i)\n",
+    "def move_disk(src, dest):\n",
+    "    moved_disk = src.pop()\n",
+    "    print(f\"Moving {moved_disk} from {src.name} to {dest.name}\")\n",
+    "    if moved_disk:\n",
+    "        dest.push(moved_disk)\n",
+    "\n",
+    "def tower_of_hanoi(n, f, h, t):\n",
+    "    if n == 0:\n",
+    "        return\n",
+    "    else:\n",
+    "        tower_of_hanoi(n-1, f, t, h)\n",
+    "        move_disk(f, t)\n",
+    "        tower_of_hanoi(n-1, h, f, t)\n",
+    "\n",
+    "\n",
+    "feeling_up_disks(3, A)\n",
+    "\n",
+    "print(f\"to be moved disks  from {A.name} = {A.items} to {C.name} = {C.items}\")\n",
+    "tower_of_hanoi(3, A, B, C)\n",
+    "\n",
+    "print(f\"moved disks from {A.name} = {A.items} to {C.name} = {C.items}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\"\"\"\n",
+    "\n",
+    "\"\"\"\n",
+    "class Solution:\n",
+    "    def canPlaceFlowers(self, flowerbed: List[int], n: int) -> bool:\n",
+    "        length_flowerbed = len(flowerbed)\n",
+    "        if n == 0:\n",
+    "             return True\n",
+    "        if n != 1 and length_flowerbed < 3:\n",
+    "            return False\n",
+    "        \n",
+    "        if n == 1 and length_flowerbed < 3:\n",
+    "            if length_flowerbed == 2 and flowerbed[0] == 0 and flowerbed[1] == 0:\n",
+    "                return True\n",
+    "            elif length_flowerbed == 1 and flowerbed[0] == 0:\n",
+    "                return True\n",
+    "            else:\n",
+    "                return False\n",
+    "                \n",
+    "        if length_flowerbed > 2:\n",
+    "            for i in range(length_flowerbed):\n",
+    "                if n > 0:\n",
+    "                    if i == 0 and (flowerbed[i] == 0 and flowerbed[i+1] == 0):\n",
+    "                        flowerbed[i] = 1\n",
+    "                        n -= 1\n",
+    "                    elif i == length_flowerbed - 2 and (flowerbed[i] == 0  and flowerbed[i+1] == 0):\n",
+    "                        flowerbed[i+1] = 1\n",
+    "                        n -= 1\n",
+    "                    else: \n",
+    "                        if flowerbed[i-1] == 0 and flowerbed[i] == 0 and flowerbed[i+1] == 0:\n",
+    "                            flowerbed[i] = 1\n",
+    "                            n -=1\n",
+    "                else:\n",
+    "                    break\n",
+    "            if n == 0:\n",
+    "                return True\n",
+    "            else:\n",
+    "                return False"
    ]
   },
   {
