feat: add the explanation of the adjacency list

--- a/pythonds-8-PE.ipynb
+++ b/pythonds-8-PE.ipynb
@@ -85,9 +85,10 @@
     "Here the focus will be on problem with sparsely connection.\n",
     "\n",
     "### An Adjacency List\n",
-    "\n",
+    "A more space-efficient way to implement a sparsely connected graph is to use an adjacency list. In an adjacency list implementation we keep a master list of all the vertices in the Graph Object and then each vertex object in the graph maintains a list of the other vertices that it is connected to.\n",
     "\n",
     "ADD the image adjlst.png\n",
+    "\n",
     "\n"
    ]
   },
