feat: implement the adjacency list for a graph

--- a/pythonds-8-PE.ipynb
+++ b/pythonds-8-PE.ipynb
@@ -89,6 +89,130 @@
     "\n",
     "ADD the image adjlst.png\n",
     "\n",
+    "#### Implementation of the adjacency list\n",
+    "\n",
+    "We will use two dictionaries to implement the adjacency list in Python. Using two abstract datatype based two classes *Graph* which holds the master list of vertices\n",
+    "and *Vertex*, which will represent each vertex in the the graph\n",
+    "*Vertex* Class\n",
+    "- uses a dict to keep track of the vertices to which it is connected, and the weight of each edge. This dictionary is called *connectedTo*\n",
+    "- *addNeighbor* method is used to add a connection from this vertex to another\n",
+    "- *getConnections* method returns all of the vertices in the adjacency list, as represented by the *connectedTo* instance variable.\n",
+    "- *getWeight* method returns the weight of the edge from this vertex to the vertex passed as a parameter.\n",
+    "\n",
+    "```python\n",
+    "class Vertex:\n",
+    "  def __init__(self, key):\n",
+    "    self.id = key\n",
+    "    self.connectedTo={}\n",
+    "  \n",
+    "  def addNeighbor(self, nbr, weight=0):\n",
+    "    self.connectedTo[nbr] = weight\n",
+    "\n",
+    "  def __str__(self):\n",
+    "    return str(self.id) + ' connectedTo: ' + str([x.id for x in self.connectedTo])\n",
+    "  \n",
+    "  def getConnections(self):\n",
+    "    return self.connectedTo.keys()\n",
+    "  \n",
+    "  def getId(self):\n",
+    "    return self.id\n",
+    "  \n",
+    "  def getWeight(self,nbr):\n",
+    "    return self.connectedTo[nbr] \n",
+    "```\n",
+    "the *Graph* class contains a dictionary that mpas vertex names to vertex objects.\n",
+    "Graph provides the following methods:\n",
+    "- adding vertices to a graph\n",
+    "- connecting one vertex to another\n",
+    "- getVertices method returns the names of all of the vertices in the graph.\n",
+    "- **__iter__** method to make it easy to iterate over all vertex objects in a particular graph.\n",
+    "the two methods allow you to itereate over the vertices in a graph by name, or by the objects themselves.\n",
+    "\n",
+    "```python\n",
+    "class Graph:\n",
+    "  def __init__(self):\n",
+    "    self.vertList = {}\n",
+    "    self.numVertices = 0\n",
+    "  \n",
+    "  def addVertex(self, key):\n",
+    "    self.numVertices = self.numVertices + 1\n",
+    "    newVertex = Vertex(key)\n",
+    "    self.vertList[key] = newVertex\n",
+    "    return newVertex\n",
+    "  \n",
+    "  def getVertex(self, n):\n",
+    "    if n in self.vertList:\n",
+    "      return self.vertList[n]\n",
+    "    else:\n",
+    "      return None\n",
+    "  \n",
+    "  def __contains__(self, n):\n",
+    "    return n in self.vertList\n",
+    "\n",
+    "  def addEdge(self, f, t, weight=0):\n",
+    "    if f not in self.vertList:\n",
+    "      nv = self.addVertex(f)\n",
+    "    if t not in self.vertList:\n",
+    "      nv = self.addVertex(t)\n",
+    "    self.vertList[f].addNeighbor(self.vertList[t], weight)\n",
+    "  \n",
+    "  def getVertices(self):\n",
+    "    return self.vertList.keys()\n",
+    "\n",
+    "  def __iter__(self):\n",
+    "    return iter(self.vertList.values())\n",
+    "\n",
+    "```\n",
+    "\n",
+    "Example of usage\n",
+    "```python\n",
+    ">>> g = Graph()\n",
+    ">>>for i in range(6):\n",
+    "     g.addVertex(i)\n",
+    "\n",
+    ">>> g.vertList\n",
+    "{0: <adjGraph.Vertex instance at 0x41e18>,\n",
+    " 1: <adjGraph.Vertex instance at 0x7f2b0>,\n",
+    " 2: <adjGraph.Vertex instance at 0x7f288>,\n",
+    " 3: <adjGraph.Vertex instance at 0x7f350>,\n",
+    " 4: <adjGraph.Vertex instance at 0x7f328>,\n",
+    " 5: <adjGraph.Vertex instance at 0x7f300>}\n",
+    "\n",
+    ">>> g.addEdge(0,1,5)\n",
+    "\n",
+    ">>> g.addEdge(0,5,2)\n",
+    "\n",
+    ">>> g.addEdge(1,2,4)\n",
+    "\n",
+    ">>> g.addEdge(2,3,9)\n",
+    "\n",
+    ">>> g.addEdge(3,4,7)\n",
+    "\n",
+    ">>> g.addEdge(3,5,3)\n",
+    "\n",
+    ">>> g.addEdge(4,0,1)\n",
+    "\n",
+    ">>> g.addEdge(5,4,8)\n",
+    "\n",
+    ">>> g.addEdge(5,2,1)\n",
+    "\n",
+    ">>> for v in g:\n",
+    "\n",
+    "      for w in v.getConnections():\n",
+    "\n",
+    "          print(\"( %s , %s )\" % (v.getId(), w.getId()))\n",
+    "\n",
+    "\n",
+    "( 0 , 5 )\n",
+    "( 0 , 1 )\n",
+    "( 1 , 2 )\n",
+    "( 2 , 3 )\n",
+    "( 3 , 4 )\n",
+    "( 3 , 5 )\n",
+    "( 4 , 0 )\n",
+    "( 5 , 4 )\n",
+    "( 5 , 2 )\n",
+    "```\n",
     "\n"
    ]
   },
