feat: add the application of a graph algorithm using the word Ladder problem
use the word ladder problem

--- a/pythonds-8-PE.ipynb
+++ b/pythonds-8-PE.ipynb
@@ -213,6 +213,24 @@
     "( 5 , 4 )\n",
     "( 5 , 2 )\n",
     "```\n",
+    "\n",
+    "### The word Ladder Problem\n",
+    "\n",
+    "Definition of the problem: The word ladder problem was invented in 1878 by Lewis Carroll, the author of Alice in wonderland. The objectif of the problem is to transform a given word for instance FOOL into another word for instance SAGE. Noted that the changes are done gradually by changing one letter at a time. At each step you must transform one word into another word, you are not allowed to transform a word into a non-word.\n",
+    "Illustration:\n",
+    "- FOOL\n",
+    "- POOL\n",
+    "- POLL\n",
+    "- POLE\n",
+    "- PALE\n",
+    "- SALE\n",
+    "- SAGE\n",
+    "There are many variations of the word ladder puzzle. For example, you might be given a particular number of steps in which to accomplish the transformation, or you might need to use a particular word. in this section we are interested in figuring out the smallest number of transformations needed to turn the starting word into the ending word.\n",
+    "\n",
+    "Here are the outline to solve the problem using Graph algorithm:\n",
+    "- Represent the relationships between the words as a graph\n",
+    "- Use the graph algorithm known as breadth first search to find an efficient path from the starting word to the ending word.\n",
+    "\n",
     "\n"
    ]
   },
