docs: add the documentation to solve word ladder

--- a/pythonds-8-PE.ipynb
+++ b/pythonds-8-PE.ipynb
@@ -231,7 +231,24 @@
     "- Represent the relationships between the words as a graph\n",
     "- Use the graph algorithm known as breadth first search to find an efficient path from the starting word to the ending word.\n",
     "\n",
-    "\n"
+    "### Building the Word ladder Graph\n",
+    "\n",
+    "Our first problem is to figure out how to turn a large collection of words into a graph. what we would like is to have an edge from one word to another if the two words are only different by a single letter. If we can create such a graph, then any path from one word to another is a solution to the word ladder puzzle.\n",
+    "Below there is an example of the graph with some words. Notice that the graph is an undirected graph and that the edges are uweighted.\n",
+    "\n",
+    "If we take the approach of comparing one word to every other word on the list is an O(n2) algorithm. For 5,100 words, n2 is more than 26 million comparisons.\n",
+    "\n",
+    "The other approach is to have bucket of words that are different by one letter only.\n",
+    "For instance: (Word buckets for words that are different by one Letter)\n",
+    "\n",
+    "_OPE: POPE, ROPE, NOPE, HOPE, LOPE, MOPE, COPE\n",
+    "P_PE: POPE, PIPE, PAPE\n",
+    "PO_E: POPE, POLE, PORE, POSE POKE\n",
+    "POP_: POPE, POPS\n",
+    "\n",
+    "To implement, this is Python we can define a dictionary with a key, the label i.e `_OPE` and the value, the list of the words of that bucket.\n",
+    "Once we have the dictionary built we can create the graph. we start our graph by creating a vertex for each word in the graph. Then we create edges between all the vertices we find for word found under the same key in the dictionary\n",
+    "\n",
    ]
   },
   {
