refactor: add implementation of the word ladder

--- a/pythonds-8-PE.ipynb
+++ b/pythonds-8-PE.ipynb
@@ -249,6 +249,29 @@
     "To implement, this is Python we can define a dictionary with a key, the label i.e `_OPE` and the value, the list of the words of that bucket.\n",
     "Once we have the dictionary built we can create the graph. we start our graph by creating a vertex for each word in the graph. Then we create edges between all the vertices we find for word found under the same key in the dictionary\n",
     "\n",
+    "```python\n",
+    "from pythonds.graphs import Graph\n",
+    "\n",
+    "def buildGraph(wordFile):\n",
+    "  d = {}\n",
+    "  g = Graph()\n",
+    "  wfile = open(wordfile, 'r')\n",
+    "  # create buckets of words that differ by one letter\n",
+    "  for line in wfile:\n",
+    "    word = line[:-1]\n",
+    "    for i in range (len(word)):\n",
+    "      bucket = word[:i] + '_' + word[i+1:]\n",
+    "      if bucket in d:\n",
+    "        d[bucket].append(word)\n",
+    "      else:\n",
+    "        d[bucket] = [word]\n",
+    "  # add vertices and edges for words in the same bucket\n",
+    "  for bucket in d.keys():\n",
+    "    for word1 in d[bucket]:\n",
+    "      for word2 in d[bucket]:\n",
+    "        if word1 != word2:\n",
+    "          g.addEdge(word1, word2)\n",
+    "  return g\n",
    ]
   },
   {
