test list presentation

--- a/bitwise.ipynb
+++ b/bitwise.ipynb
@@ -146,6 +146,28 @@
     "    print(a >> b)\n",
     "    print(~a)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "pop\n",
+      "\n",
+      "ope\n"
+     ]
+    }
+   ],
+   "source": [
+    "word=\"pope\"\n",
+    "print(word[:-1])\n",
+    "print(word[:0])\n",
+    "print(word[1:])"
+   ]
   }
  ],
  "metadata": {
