--- a/pythonds-8-PE.ipynb
+++ b/pythonds-8-PE.ipynb
@@ -272,6 +272,31 @@
     "        if word1 != word2:\n",
     "          g.addEdge(word1, word2)\n",
     "  return g\n",
+    "```\n",
+    "\n",
+    "### Implementing the Breadth First Search\n",
+    "To help us find the shortest solution to the word ladder problem. we will use the graph algorithm called \"breadth first search\" algorithm. \n",
+    "\n",
+    "Given a graph G and a starting vertex s, a breadth first search proceeds by exploring edges in the graph to find all the vertices in G for which there is a path from s. The remarkable thing about a breadth first search is that it finds all the vertices that are a distance k from s before it finds any vertices that are a distance k+1. One good way to visualize what the breadth first search algorithm does is to imagine that it is building a tree, one level of the tree at a time. A breadth first search adds all children of the starting vertex before it begins to discover any of the grandchildren.\n",
+    "\n",
+    "To keep track of its progress, BFS colors each of the vertices white, gray or black. All the vertices are initialized to white when they are constructed. A white vertex is an undiscovered vertex. When a vertex is initially discovered it is colored gray, and when BFS has completely explored a vertex it is colored black.\n",
+    "This means that once a vertex is colored black, it has no white vertices adjacent to it. A gray node, on the other hand, may have some white vertices adjacent to it, indicating that there are still additional vertices to explore\n",
+    "Note that BFS uses a `Queue`, a crucial point as we will see, to decide which vertex to explore next.\n",
+    "\n",
+    "BFS begins at the starting vertex s and colors start gray to show that it is currently being explored. Two other values, the distance and the predecessor, are initialized to 0 and None respectively for the starting vertex. Finally, start is placed on a Queue. The next step is to begin to systematically explore vertices at the front of the queue. We explore each new node at the front of the queue by iterating over its adjacency list. As each node on the adjacency list is examined its color is checked. If it is white, the vertex is unexplored, and four things happen:\n",
+    "\n",
+    "    The new, unexplored vertex nbr, is colored gray.\n",
+    "\n",
+    "    The predecessor of nbr is set to the current node currentVert\n",
+    "\n",
+    "    The distance to nbr is set to the distance to currentVert + 1\n",
+    "\n",
+    "    nbr is added to the end of a queue. Adding nbr to the end of the queue effectively schedules this node for further exploration, but not until all the other vertices on the adjacency list of currentVert have been explored.\n",
+    "\n",
+    "```python\n",
+    "from pythonds.graphs import Graph, Vertex\n",
+    "from pythonds.basic import Queue\n",
+    "\n",
     "```"
    ]
   }
