add the problem of the knight's tour graph

--- a/pythonds-8-PE.ipynb
+++ b/pythonds-8-PE.ipynb
@@ -297,7 +297,52 @@
     "from pythonds.graphs import Graph, Vertex\n",
     "from pythonds.basic import Queue\n",
     "\n",
-    "```"
+    "def bfs(g, start):\n",
+    "  start.setDistance(0)\n",
+    "  start.setPred(None)\n",
+    "  vertQueue = Queue()\n",
+    "  vertQueue.enqueue(start)\n",
+    "  while (vertQueue.size() > 0):\n",
+    "    currentVert = vertQueue.dequeue()\n",
+    "    for nbr in currentVert.getConnections():\n",
+    "      if (nbr.getColor() == 'white'):\n",
+    "        nbr.setColor('gray')\n",
+    "        nbr.setDistance(currentVert.getDistance() + 1)\n",
+    "        nbr.setPred(currentVert)\n",
+    "        vertQueue.enqueue(nbr)\n",
+    "    currentVert.setColor('black')\n",
+    "```\n",
+    "The amazing thing about the breadth first search solution is that we have not only solved the FOOL-SAGE problem we started out with, but we have solved many other problems along the way. We can start at any vertex in the breadth first search tree and follow the predecessor arrows back to the root to find the shortest word ladder form any word back to fool\n",
+    "\n",
+    "```python\n",
+    "def traverse(y):\n",
+    "  x = y\n",
+    "  while (x.getPred()):\n",
+    "    print(x.getId())\n",
+    "    x = x.getPred()\n",
+    "  print(x.getId())\n",
+    "\n",
+    "traverse(g.getVertex('sage'))\n",
+    "```\n",
+    "### Breadth First Search Analysis\n",
+    "\n",
+    "Before we continue with other graph algorithms let us analyze the run time performance of the breadth first search algorithm. The first thing to observe is that the while loop is executed, at most, one time for each vertex in the graph |v|. You can see that this is true because a vertex must be white before it can be examined and added to the queue. This gives us O(V) for the while loop. The for loop, which is nested inside the while is executed at most once for each edge in the graph, |E|. The reason is that every vertex is dequeued at most once and we examine an edge from node U to node V only when node is dequeued. This gives us O(E)for the for loop. combining the two loops gives us O(V + E)\n",
+    "Of course doing the breadth first search is only part of the task. Following the links from the starting node to the goal node is the other part of the task. The worst case for this would be if the graph was a single long chain. In this case traversing through all of the vertices would be O(V). The normal case is going to be some fraction of |V| but we would still write O(V)\n",
+    "\n",
+    "Finally, at least for this problem, there is the time required to build the initial graph. We leave the analysis of the buildGraph function as an exercise for you.\n",
+    "\n",
+    "### The knight's Tour Problem\n",
+    "Another classic problem that we can use to illustrate a second common graph algorithm is called the “knight’s tour.” The knight’s tour puzzle is played on a chess board with a single chess piece, the knight. The object of the puzzle is to find a sequence of moves that allow the knight to visit every square on the board exactly once. One such sequence is called a “tour.” The knight’s tour puzzle has fascinated chess players, mathematicians and computer scientists alike for many years. The upper bound on the number of possible legal tours for an eight-by-eight chessboard is known to be 1.305 x 10^35; however, there are even more possible dead ends. Clearly this is a problem that requires some real brains, some real computing power, or both.\n",
+    "\n",
+    "We will used the graph search which is one of the easiest to understand and program. Once again we will solve the problem using two main steps:\n",
+    "- Represent the legal moves of a knight on a chessboard as a graph.\n",
+    "- Use a graph algorithm to find a path of length rows * columns - 1 where every vertex on the graph is visited exactly once.\n",
+    "\n",
+    "#### Building the knight's Tour graph\n",
+    "\n",
+    "To represent the knight's tour problem as a graph we will use the following two ideas:\n",
+    "- Each square on the chessboard can be represented as a node in the graph\n",
+    "- Each legal move by the knight can be represented as an edge in the graph."
    ]
   }
  ],
