solve the knight's tour problem

--- a/pythonds-8-PE.ipynb
+++ b/pythonds-8-PE.ipynb
@@ -342,7 +342,52 @@
     "\n",
     "To represent the knight's tour problem as a graph we will use the following two ideas:\n",
     "- Each square on the chessboard can be represented as a node in the graph\n",
-    "- Each legal move by the knight can be represented as an edge in the graph."
+    "- Each legal move by the knight can be represented as an edge in the graph.\n",
+    "\n",
+    "To build the full graph for a n-by-n board we can use the Python function. \n",
+    "- `knightGraph` function makes one pass over the entire board\n",
+    "- At each square on the board the `knightGraph` function calls a helper\n",
+    "- `genLegalMoves`, to create a list of legal moves for that position on the board\n",
+    "- All legal moves are then converted into edges in the graph. \n",
+    "- Another helper function `posToNodeId` converts a location on the board in the terms of a row and a column into a linear vertex number similar to the vertex numbers.\n",
+    "\n",
+    "```python\n",
+    "from pythonds.graphs import Graph\n",
+    "\n",
+    "def knightGraph(bdSize):\n",
+    "  ktGraph = Graph()\n",
+    "  for row in range(bdSize):\n",
+    "    for col in range(dbSize):\n",
+    "      nodeId = posToNodeId(row, col, bdSize)\n",
+    "      newPositions = genLegalMoves(row, col, bdSize)\n",
+    "      for e in newPositions:\n",
+    "        nid = posToNodeId(e[0], e[1], bdSize)\n",
+    "        ktGraph.addEdge(nodeId, nid)\n",
+    "  return ktGraph\n",
+    "\n",
+    "def posToNodeId(row, column, board_size):\n",
+    "  return (row * board_size) + column\n",
+    "```\n",
+    "\n",
+    "the `genLegalMoves` function takes the position of the knight on the board and generates each of the eight possible moves.\n",
+    "\n",
+    "```python\n",
+    "def genLegalMoves(x, y, bdSize):\n",
+    "  newMoves = []\n",
+    "  moveOffSets = [(-1, -2), (-1, 2),(-2, -1), (-2, 1),(1, -2), (1, 2),(2, -1),(2,1)]\n",
+    "\n",
+    "  for i in moveOffsets:\n",
+    "    newX = x + i[0]\n",
+    "    newY = y + i[1]\n",
+    "    if legalCoord(newX, bdSize) and legalCoord(newY, bdSize):\n",
+    "      newMoves.append((newX, newY))\n",
+    "  return newMoves\n",
+    "def legalCoord(x, bdSize):\n",
+    "  if x >= 0 and x < bdSize:\n",
+    "    return True\n",
+    "  else:\n",
+    "    return False\n",
+    "```"
    ]
   }
  ],
