add the depth first search algorithm explanations

--- a/pythonds-8-PE.ipynb
+++ b/pythonds-8-PE.ipynb
@@ -387,7 +387,19 @@
     "    return True\n",
     "  else:\n",
     "    return False\n",
-    "```"
+    "```\n",
+    "\n",
+    "### Implementing Knight's Tour\n",
+    "\n",
+    "The search algorithm we will use to solve the knight's tour problme is called `depth first search (DFS)`.\n",
+    "*Whereas the breadth first search algorithm discussed in the previous section builds a search tree one level at a time, a depth first search creates a search tree by exploring one branch of the tree as deeply as possible.*\n",
+    "\n",
+    "We will use two algorithms to solve the knight's tour problem:\n",
+    "- Explicitly forbidding a node to be visited more than once.\n",
+    "- Allows nodes to be visited more than once (This version is used in subsequent sections to devleop additional graph algorithms.)\n",
+    "\n",
+    "Here, the objective is to find a path that has exactly 63 edges. \n",
+    "Noted that when the depth first search find a dead end (move) it backs up the tree to the next deepest vertex that allows it to make a legal move."
    ]
   }
  ],
