docs: add implementation of dfs with traversing more than once vertex

--- a/pythonds-8-PE.ipynb
+++ b/pythonds-8-PE.ipynb
@@ -399,7 +399,40 @@
     "- Allows nodes to be visited more than once (This version is used in subsequent sections to devleop additional graph algorithms.)\n",
     "\n",
     "Here, the objective is to find a path that has exactly 63 edges. \n",
-    "Noted that when the depth first search find a dead end (move) it backs up the tree to the next deepest vertex that allows it to make a legal move."
+    "Noted that when the depth first search find a dead end (move) it backs up the tree to the next deepest vertex that allows it to make a legal move.\n",
+    "\n",
+    "the `knightTour` function takes four parameters: \n",
+    "- n, the current depth in the search tree;\n",
+    "- path, a list of vertices visited up to this point\n",
+    "- u, the vertex in the graph we wish to explore\n",
+    "- limit, the number of nodes in the path.\n",
+    "\n",
+    "`knightTour` function is recusirve,\n",
+    "When the `knigthTour` function is called, it first checks the base case condition. if we have a path that contains 64 vertices, we return from `knightTour` with a status of `True`, indicating that we have found a successful tour. if the path is not long enough we continue to explore one level deeper by choosing a new vertex to explore and calling `knightTour` recursively for that vertex.\n",
+    "\n",
+    "DFS also uses colors to keep track of which vertices in the graph have been visited. Unvisited vertices are colored white, and visited vertices are colored gray. If all neighbors of a particular vertex have been explored and we have not yet reached our goal length of 64 vertices, we have reached a dead end. When we reach a dead end we must backtrack. Backtracking happens when we return from `knightTour` with status of `False`.\n",
+    "In the breadth first search we used a queue to keep track of which vertex to visit next. Since depth first search is recursive, we are implicitly using a stack to help us with our backtracking. When we return from a call to `knightTour` with a status of `False`, in line 11, we remain inside the `while` loop and look at the next vertex in `nbrList`\n",
+    "\n",
+    "```python\n",
+    "from pythonds.graphs import Graph, Vertex\n",
+    "def knightTour(n, path, u, limit):\n",
+    "  u.setColor('gray')\n",
+    "  path.append(u)\n",
+    "  if n < limit:\n",
+    "    nbrList = list(u.getConnections())\n",
+    "    i = 0\n",
+    "    done = False\n",
+    "    while i < len(nbrList) and not done:\n",
+    "      if nbrList[i].getColor() == 'white':\n",
+    "        done = knightTour(n+1, path, nbrList[i], limit)\n",
+    "      i = i + 1\n",
+    "    if not done: # prepare to backtrack\n",
+    "      path.pop()\n",
+    "      u.setColor('white')\n",
+    "  else:\n",
+    "    done = True\n",
+    "  return done\n",
+    "```\n"
    ]
   }
  ],
