docs: document the analysis of the knight's tour problem

--- a/pythonds-8-PE.ipynb
+++ b/pythonds-8-PE.ipynb
@@ -432,7 +432,8 @@
     "  else:\n",
     "    done = True\n",
     "  return done\n",
-    "```\n"
+    "```\n",
+    "### knight's Tour Analysis"
    ]
   }
  ],
