docs: start the explanation of the analysis of the knight problem

--- a/pythonds-8-PE.ipynb
+++ b/pythonds-8-PE.ipynb
@@ -433,7 +433,10 @@
     "    done = True\n",
     "  return done\n",
     "```\n",
-    "### knight's Tour Analysis"
+    "### knight's Tour Analysis\n",
+    "\n",
+    "We have already seen that the number of nodes in a binary tree of height N is 2^N+1 -1. For a tree with nodes that may have up to eight children instead of two the number of nodes is much large. Because the branching factor of each node is variable, we could estimate the number of nodes using an average branching factor\n",
+    "\n",
    ]
   }
  ],
