docs: add an explanation of the branching factor

--- a/pythonds-8-PE.ipynb
+++ b/pythonds-8-PE.ipynb
@@ -437,6 +437,73 @@
     "\n",
     "We have already seen that the number of nodes in a binary tree of height N is 2^N+1 -1. For a tree with nodes that may have up to eight children instead of two the number of nodes is much large. Because the branching factor of each node is variable, we could estimate the number of nodes using an average branching factor\n",
     "\n",
+    "#### Explaining the branching factor\n",
+    "The \"branching factor\" in a graph tree (or more broadly, a tree data structure or search tree) refers to the **number of children at each node**. It essentially quantifies how \"bushy\" or \"wide\" a tree is.\n",
+    "\n",
+    "### How is it Calculated?\n",
+    "\n",
+    "There are a few ways to think about it:\n",
+    "\n",
+    "1.  **Uniform Branching Factor:** If every non-leaf node in the tree has the exact same number of children, then that number is the branching factor. For example, a binary tree always has a branching factor of 2.\n",
+    "\n",
+    "2.  **Average Branching Factor:** In many real-world scenarios (like game trees, decision trees, or search trees for AI problems), the number of children can vary from node to node. In such cases, we calculate an **average branching factor**.\n",
+    "\n",
+    "    The most common way to calculate the average branching factor is:\n",
+    "\n",
+    "    $$\\text{Average Branching Factor} = \\frac{\\text{Total number of non-root nodes (or edges)}}{\\text{Total number of non-leaf nodes (nodes with children)}}$$\n",
+    "\n",
+    "    Essentially, it's the total number of \"branches\" extending from parent nodes, divided by the number of nodes that *have* children.\n",
+    "\n",
+    "3.  **Maximum Branching Factor:** Sometimes, you might be interested in the maximum number of children any single node has in the tree. This is particularly relevant for analyzing worst-case scenarios in algorithms.\n",
+    "\n",
+    "### Why is it Important?\n",
+    "\n",
+    "The branching factor is a critical metric because it directly impacts:\n",
+    "\n",
+    "  * **Complexity of Algorithms:** Algorithms that traverse trees (like Breadth-First Search, Depth-First Search, or Minimax for game playing) are heavily influenced by the branching factor. A higher branching factor leads to an exponentially larger search space, causing what's known as \"combinatorial explosion.\"\n",
+    "  * **Memory Usage:** A wider tree means more nodes at each level, which can require more memory to store.\n",
+    "  * **Performance:** Higher branching factors can make search algorithms computationally more expensive, requiring more time to explore all possible paths. Techniques like alpha-beta pruning in game AI aim to reduce the *effective* branching factor by eliminating branches that don't need to be explored.\n",
+    "\n",
+    "### Illustration:\n",
+    "\n",
+    "Let's illustrate with an example tree:\n",
+    "\n",
+    "```\n",
+    "          A (Root)\n",
+    "         / | \\\n",
+    "        B  C  D\n",
+    "       / \\    / \\\n",
+    "      E   F  G   H\n",
+    "     /\n",
+    "    I\n",
+    "```\n",
+    "\n",
+    "In this tree:\n",
+    "\n",
+    "  * **Node A** has 3 children (B, C, D).\n",
+    "  * **Node B** has 2 children (E, F).\n",
+    "  * **Node C** has 0 children (it's a leaf).\n",
+    "  * **Node D** has 2 children (G, H).\n",
+    "  * **Node E** has 1 child (I).\n",
+    "  * **Nodes F, G, H, I** are all leaf nodes (0 children).\n",
+    "\n",
+    "Now let's calculate the average branching factor:\n",
+    "\n",
+    "1.  **Non-root nodes (or edges):** Count all nodes except the root 'A', or count all the edges.\n",
+    "\n",
+    "      * Nodes: B, C, D, E, F, G, H, I = 8 non-root nodes.\n",
+    "      * Edges: (A,B), (A,C), (A,D), (B,E), (B,F), (D,G), (D,H), (E,I) = 8 edges.\n",
+    "\n",
+    "2.  **Non-leaf nodes (nodes with children):** These are the nodes that have outgoing branches.\n",
+    "\n",
+    "      * Nodes: A, B, D, E = 4 non-leaf nodes.\n",
+    "\n",
+    "3.  **Average Branching Factor Calculation:**\n",
+    "    $$\\text{Average Branching Factor} = \\frac{\\text{Number of non-root nodes}}{\\text{Number of non-leaf nodes}} = \\frac{8}{4} = 2$$\n",
+    "\n",
+    "So, for this tree, the average branching factor is **2**. Even though some nodes have 3 or 1 child, on average, each non-leaf node has 2 children.\n",
+    "\n",
+    "If we were to consider the **maximum branching factor** for this tree, it would be **3** (from node A)."
    ]
   }
  ],
