docs: add the code

--- a/pythonds-8-PE.ipynb
+++ b/pythonds-8-PE.ipynb
@@ -503,7 +503,10 @@
     "\n",
     "So, for this tree, the average branching factor is **2**. Even though some nodes have 3 or 1 child, on average, each non-leaf node has 2 children.\n",
     "\n",
-    "If we were to consider the **maximum branching factor** for this tree, it would be **3** (from node A)."
+    "If we were to consider the **maximum branching factor** for this tree, it would be **3** (from node A).\n",
+    "\n",
+    "```python\n",
+    "```"
    ]
   }
  ],
