docs: explain the heuristic

--- a/pythonds-8-PE.ipynb
+++ b/pythonds-8-PE.ipynb
@@ -505,6 +505,12 @@
     "\n",
     "If we were to consider the **maximum branching factor** for this tree, it would be **3** (from node A).\n",
     "\n",
+    "#### Explain the heuristic\n",
+    "The problem with using the vertex with the most available moves as your next vertex on the path is that it tends to have the knight visit the middle \n",
+    "squares early on in the tour. When this happens it is easy for the knight to get stranded on one side of the board where it cannot reach unvisited squares \n",
+    "on the other side of the board. On the other hand, visiting the squares with the fewest available moves first pushes the knight to visit the squares around the \n",
+    "edges of the board first. This ensures that the knight will visit the hard-to-reach corners early and can use the middle squares to hop across the board only when necessary.\n",
+    "Utilizing this kind of knowledge to speed up an algorithm is called a heuristic.\n",
     "```python\n",
     "```"
    ]
