docs: add the code to implement the heuristics with orderbyavail

--- a/pythonds-8-PE.ipynb
+++ b/pythonds-8-PE.ipynb
@@ -511,7 +511,21 @@
     "on the other side of the board. On the other hand, visiting the squares with the fewest available moves first pushes the knight to visit the squares around the \n",
     "edges of the board first. This ensures that the knight will visit the hard-to-reach corners early and can use the middle squares to hop across the board only when necessary.\n",
     "Utilizing this kind of knowledge to speed up an algorithm is called a heuristic.\n",
+    "Humans use heuristics every day to help make decisions, heuristic searches are often used in the field of artificial intelligence. \n",
+    "This particular heuristic is called Warnsdorff’s algorithm, named after H. C. Warnsdorff who published his idea in 1823.\n",
+    "\n",
     "```python\n",
+    "def orderByAvail(n):\n",
+    "    resList = []\n",
+    "    for v in n.getConnections():\n",
+    "        if v.getColor() == 'white':\n",
+    "            c = 0\n",
+    "            for w in v.getConnections():\n",
+    "                if w.getColor() == 'white':\n",
+    "                    c = c + 1\n",
+    "            resList.append((c,v))\n",
+    "    resList.sort(key=lambda x: x[0])\n",
+    "    return [y[1] for y in resList]\n",
     "```"
    ]
   }
